# OpenCL_Convolucion

./: .gitignore  CMakeLists.txt  README.md  test_kernel
img_input/: .gitignore  CMakeLists.txt  README.md
img_input/include/: cl_manager.h  convolucion_paralelo.h  convolucion_secuencial.h
img_input/kernels/: convolucion.cl
img_input/src/: cl_manager.c  convolucion_secuencial.c  main.c
include/: image_utils.h  opencl_utils.h
kernels/: convolucion.cl
src/: convolucion_paralelo.c  image_utils.c  main.c  opencl_utils.c  stb_all.c
